# entropic-cw1

./: Cargo.toml
artifacts/: checksums.txt  cw1_whitelist.wasm
contracts/cw1-whitelist/: Cargo.toml
contracts/cw1-whitelist/src/: contract.rs
