[package]
name = "cw1-whitelist"
version = "2.0.0-entropic"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
test-utils = []

[dependencies]
cosmwasm-schema = "2.1"
cw-utils = "2.0"
cw1 = "2.0"
cw2 = "2.0"
cosmwasm-std = { version = "2.1", features = [
    "staking",
    "stargate",
    "cosmwasm_1_4",
] }
cw-storage-plus = "2.0"
schemars = "0.8"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = "2.0"
derivative = "2"
